# LGFaware-Meshing

./: CMakeLists.txt  README.md  package.xml
Log/: mat_pre.txt
config/: avia_r3live.yaml  kitti_gt_mesh.yaml  maicity_gt_mesh.yaml  ncd_gt_mesh.yaml  velodyne_kitti.yaml  velodyne_maicity.yaml
include/: common_lib.h  hash_idx.hpp
launch/: mapping_kitti.launch  mapping_kitti_gtpose.launch  mapping_maicity.launch  mapping_maicity_gtpose.launch  mapping_ncd_gtpose.launch  mapping_r3live.launch
rviz_cfg/: my_lio.rviz
src/: DataType.h  GL_gui.cpp  GL_gui.h  MeshFragment.cpp  MeshFragment.h  MeshReconstructOnline.cpp  NonPlaneMesh.cpp  NonPlaneMesh.h  QuadTree.hpp  offline_mesh_display.cpp  region_tri_shader.hpp
src/meshing/r3live/: pointcloud_rgbd.cpp  triangle.cpp  triangle.hpp
src/odometry/fastlio/: CMakeLists.txt
src/odometry/fastlio/config/: avia.yaml
src/odometry/fastlio/include/: common_lib.h
src/odometry/fastlio/src/: laserMapping.cpp  preprocess.cpp
src/odometry/gt_odometry/: CMakeLists.txt  gt_pub.cpp
src/odometry/voxelmap/: CMakeLists.txt
src/odometry/voxelmap/include/: common_lib.h
src/odometry/voxelmap/src/: IMU_Processing.hpp  preprocess.cpp  preprocess.h  voxelMapping.cpp
src/shader/: tools_my_texture_triangle_shader.h
src/tools/: tools_thread_pool.hpp
